[tool.poetry]
name = "jaist-my-jupyter"
version = "0.1.0"
description = ""
authors = ["nnao45 <n4sekai5y@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
hmmlearn = "^0.2.7"
pandas = "^1.4.1"
pykalman = "^0.9.5"
scikit-learn = "^1.0.2"
ipykernel = "^6.9.1"
matplotlib = "^3.5.1"
requests = "^2.27.1"
statsmodels = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
